<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="developer.kayali.android.musicplayer.NowPlayingActivity"
    tools:showIn="@layout/activity_now_playing">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/header"
            android:layout_margin="16dp"
            android:text="@string/now_playing"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/imageButton"
                android:scaleType="fitXY"
                android:src="@drawable/music"
                android:id="@+id/album_image"/>

            <ImageButton
                android:id="@+id/favorite_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="32dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ic_favorite_border_white_24dp"
                android:contentDescription="@string/imageButton" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/track_name"
                android:id="@+id/track_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/duration"
                android:id="@+id/track_duration"/>
        </LinearLayout>
        <TextView
            style="@style/nowPlayingDetails"
            android:text="@string/album"
            android:id="@+id/album_name"/>
        <TextView
            android:text="@string/artist"
            android:id="@+id/artist_name"
            style="@style/nowPlayingDetails" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/previousBtn"
                style="@style/playButtons"
                android:src="@android:drawable/ic_media_previous" />
            <ImageButton
                android:id="@+id/playBtn"
                style="@style/playButtons"
                android:src="@android:drawable/ic_media_play" />
            <ImageButton
                android:id="@+id/nextBtn"
                style="@style/playButtons"
                android:src="@android:drawable/ic_media_next" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>




