<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="developer.kayali.android.musicplayer.FavoritesActivity"
    tools:showIn="@layout/activity_favorites">
    <TextView
        android:text="@string/favorites"
        style="@style/header" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/tracks_btn"
            android:text="@string/all_tracks"
            style="@style/navBarButtons"
            android:textSize="16sp" />
        <Button
            android:id="@+id/favorites_btn"
            android:text="@string/favorites"
            android:backgroundTint="@color/too_dark_gray"
            style="@style/navBarButtons"/>
        <Button
            android:id="@+id/recent_btn"
            android:text="@string/recent"
            style="@style/navBarButtons" />
    </LinearLayout>
    <ListView
        android:id="@+id/list_view"
        style="@style/listView">
    </ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/previousBtn"
            android:src="@android:drawable/ic_media_previous"
            style="@style/playButtons" />
        <ImageButton
            android:id="@+id/playBtn"
            style="@style/playButtons"
            android:src="@android:drawable/ic_media_play" />
        <ImageButton
            android:id="@+id/nextBtn"
            style="@style/playButtons"
            android:src="@android:drawable/ic_media_next" />
    </LinearLayout>
</LinearLayout>
